--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -242,7 +242,7 @@
           </p>
           <p style="text-align: center">
             <a
-              href="https://github.com/Muso-Health/questions-answers-ui"
+              href="https://github.com/Muso-Health/doc-qa-ui.git"
               aria-label="Github"
               target="_blank"
               rel="noopener"
